@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)n3.c	1.78 (gritter) 4/14/06
+ * Sccsid @(#)n3.c	1.79 (gritter) 4/14/06
  */
 
 /*
@@ -1386,6 +1386,8 @@ mgetach(void)
 	j = cbits(i = getch());
 	if (ismot(i) || j == ' ' || j == '\n' || j >= 0200 ||
 			j < sizeof nmctab && nmctab[j]) {
+		if (j >= 0200)
+			illseq(j, NULL, -3);
 		ch = i;
 		j = 0;
 	}
